--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "socket.io-client": "^4.5.1",
     "timeago.js": "^4.0.0-beta.3",
     "web-vitals": "^2.1.4"
   },
